fix: spacing between link icons

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -32,7 +32,7 @@
     div {
       display: flex;
       justify-content: space-between;
-      width: 125px;
+      width: 145px;
       margin: auto;
       height: 25px;
       img {
